--- a/src/layout/ChatLayout.css
+++ b/src/layout/ChatLayout.css
@@ -7,19 +7,21 @@
 .chat-container {
     display: flex;
     overflow-x: hidden;
-    margin-top: 1%;
-
 }
 
-
 .chat-left {
-    width: 30%;
-    margin-left: 3%;
-    margin-right:1%;
+    width: 25%;
+    margin: 3%;
+    background-color: white;
     /* border: 1px solid #ccc;
     border-radius: 15%; */
 }
 
 .chat-right {
-    width: 70%;
+    width: 75%;
+    height: 100vh;
+    display: flex;
+    flex-direction: row;
+    padding: 15px;
+    background-color: rgb(184, 184, 184);
 }
