--- a/src/components/chat/chatOtherUser/ChatOtherUser.css
+++ b/src/components/chat/chatOtherUser/ChatOtherUser.css
@@ -31,6 +31,68 @@
 .main-chat {
     width: 100%;
     height: 80%;
+    display: flex;
+    flex-direction: column;
+}
+
+.message {
+    display: flex;
+    align-items: flex-end;
+    margin-top: 10px;
+}
+
+.message-content {
+    position: relative;
+    max-width: 400px;
+    border: solid 1px gray;
+    border-radius: 10px;
+    padding: 5px;
+}
+
+.other {
+    justify-content: flex-start;
+}
+
+.me {
+    justify-content: flex-end;
+}
+
+.me .message-content {
+    background-color: green;
+    color: white;
+}
+
+.me .avt {
+    background-image: url("../../../assets/images/user.png");
+}
+
+.time-send {
+    position: absolute;
+    min-width: 115px;
+    padding: 3px;
+    border: solid 1px black;
+    background-color: rgba(0, 0, 0, 0.5);
+    color: white;
+    border-radius: 10px;
+    font-size: 10px;
+    bottom: 0;
+    z-index: 100;
+    opacity: 0;
+    transform: translateY(4px);
+    transition: 0.2s;
+}
+
+.other .message-content .time-send {
+    left: -115px;
+}
+
+.me .message-content .time-send {
+    right: -115px;
+}
+
+.message-content:hover .time-send {
+    opacity: 1;
+    transform: translateY(0);
 }
 
 .chat-input {
@@ -45,8 +107,9 @@
     padding: 1px 5px 1px 5px;
 }
 
-.image-btn, .file-btn {
-    width: 6%;
+.image-btn,
+.file-btn {
+    width: 7%;
     height: 80%;
     background-color: white;
     background-image: url('../../../assets/images/imageicon.png');
@@ -56,29 +119,34 @@
     margin-right: 5px;
     background-position: center;
 }
-.file-btn{
+
+.file-btn {
     background-image: url('../../../assets/images/file.png');
 }
-.form-chat{
+
+.form-chat {
     width: 90%;
     height: 90%;
     display: flex;
     flex-direction: row;
     align-items: center;
 }
-.chat-text{
-    width:85%;
+
+.chat-text {
+    width: 85%;
     height: 80%;
     border: solid 1px gray;
     border-radius: 15px;
     padding: 10px;
 }
-.icon-btn{
+
+.icon-btn {
     width: 6%;
     height: 70%;
     background-image: url('../../../assets/images/emoji.png');
 }
-.send-btn{
+
+.send-btn {
     width: 6%;
     height: 80%;
     background-image: url('../../../assets/images/send.png');
