--- a/src/components/chat/chatOtherUser/InfoChat.css
+++ b/src/components/chat/chatOtherUser/InfoChat.css
@@ -1,3 +1,6 @@
+p{
+    margin: 0;
+}
 .infor{
     width: 30%;
     height: 100%;
@@ -6,16 +9,154 @@
     flex-direction: column;
 }
 
-.inforOtherUser{
+.inforOtherUserBox{
     width: 100%;
     height: 70%;
     border-radius: 15px;
     background-color: white;
 }
-.inforUser{
+.inforOtherUser{
+    width: 100%;
+    height: 35%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.avt-o{
+    width: 60px;
+    height: 60px;
+    margin: 5px 10px 5px 10px;
+    border: solid 1px black;
+    border-radius: 50%;
+    background-image: url("../../../assets/images/icon-person.png");
+    background-size: cover;
+}
+.media-box{
+    width: 100%;
+    height: 65%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.btn-box {
+    width: 100%;
+    height: 26px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+.btn-media{
+    width: 60px;
+    border-radius: 5px 5px 0 0;
+    border: solid 1px gray;
+    border-bottom: none;
+    padding: 0;
+    margin-right: 10px;
+}
+.chose{
+    background-color: cyan;
+}
+.media{
+    width: 100%;
+    height: 90%;
+    position: relative;
+    border-top: solid 1px gray;
+    padding: 10px 30px ;
+}
+.image-box{
+    width: 90%;
+    height: 70px; 
+    margin-left: 0; 
+    position: absolute;
+    top: 10px;
+    left: 12px;
+}
+.img{
+    padding: 0 3px;
+    margin-bottom: 6px;
+}
+img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.file-box{
+    width: 100%;
+    height: 100%;
+    padding: 10px;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.file{
+    width: 100%;
+    height: 30px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    position: relative;
+}
+.file-icon{
+    width: 20px;
+    height: 20px;
+    background-color: white;
+    background-image: url("../../../assets/images/file-icon.png");
+    background-size: cover;
+    margin-right: 20px;
+}
+.file-name {
+  max-width: 100px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+@media (max-width: 992px) {
+  .file-name {
+    max-width: 50px;
+  }
+}
+.download-btn{
+    width: 20px;
+    height: 20px;
+    border: none;
+    background-color: white;
+    background-image: url("../../../assets/images/download.png");
+    background-size: cover;
+    margin-right: 0;
+    position: absolute;
+    top: 5px;
+    right: 20px;
+}
+.show{
+    visibility: visible;
+}
+.hidden{
+    visibility: hidden;
+}
+.inforUserBox{
     width: 100%;
     height: 30%;
     margin-top: 20px;
     border-radius: 15px;
     background-color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.avt-u{
+    background-image: url('../../../assets/images/user.png');
+}
+.logout-btn{
+    padding: 3px 5px 3px 5px;
+    background-color: red;
+    border-radius: 5px;
+    font-weight: 500;
+    color: white;
+    border: none;
+    margin-top: 20px;
 }
