--- a/src/components/chat/chatOtherUser/ChatOtherUser.css
+++ b/src/components/chat/chatOtherUser/ChatOtherUser.css
@@ -33,6 +33,8 @@
 .main-chat {
     width: 100%;
     height: 80%;
+    overflow-x: hidden;
+    overflow-y: auto;
     display: flex;
     flex-direction: column;
 }
@@ -70,26 +72,26 @@
 
 .time-send {
     position: absolute;
-    min-width: 115px;
+    min-width: 85px;
     padding: 3px;
     border: solid 1px black;
     background-color: rgba(0, 0, 0, 0.5);
     color: white;
     border-radius: 10px;
     font-size: 10px;
-    bottom: 0;
-    z-index: 100;
+    bottom: -25px;
+    z-index: 1;
     opacity: 0;
     transform: translateY(4px);
     transition: 0.2s;
 }
 
 .other .message-content .time-send {
-    left: -115px;
+    left: 0px;
 }
 
 .me .message-content .time-send {
-    right: -115px;
+    right: 0px;
 }
 
 .message-content:hover .time-send {
@@ -168,8 +170,29 @@
     background-image: url('../../../assets/images/send.png');
     background-size: contain;
 }
+.room-avt{
+    width: 40px;
+    height: 40px;
+    margin: 5px 10px 5px 10px;
+    border: solid 1px black;
+    border-radius: 50%;
+    background-color: white;
+    background-image: url("../../../assets/images/roomchat.png");
+    background-size: cover;
+}
+.sender-mess{
+    color: gray;
+    font-size: 10px;
+
+}
 @media (max-width: 992px) {
     .chat-box{
         width: 95%;
+    }
+    p, button{
+        font-size: 12px;
+    }
+    .time-send{
+        font-size: 8px;
     }
 }
