--- a/src/components/chat/chatOtherUser/InfoChat.css
+++ b/src/components/chat/chatOtherUser/InfoChat.css
@@ -15,11 +15,12 @@ p {
     height: 70%;
     border-radius: 15px;
     background-color: white;
+    overflow-y: auto;
 }
 
 .inforOtherUser {
     width: 100%;
-    height: 130px;
+    height: 100px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -39,6 +40,10 @@ p {
 .media-box {
     width: 100%;
     height: 65%;
+}
+
+.media-detail-box {
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -74,6 +79,7 @@ p {
     border-top: solid 1px gray;
     padding: 10px 30px;
 }
+
 
 .image-box {
     width: 90%;
@@ -179,15 +185,11 @@ img {
 .more-info-btn {
     display: none;
 }
-.info-u-btn{
+
+.info-u-btn {
     display: none;
 }
-/* .sidebar{
-    width: 10%;
-    margin-left: 5px;
-    display: flex;
-    flex-direction: column;
-} */
+
 .inforUserBoxMobile {
     width: 30%;
     height: 40%;
@@ -203,12 +205,15 @@ img {
     right: 50px;
     z-index: 100;
 }
-.inforUserBoxMobile .logout-btn{
+
+.inforUserBoxMobile .logout-btn {
     margin-top: 2px;
 }
-.inforOtherUserBoxMobile{
+
+.inforOtherUserBoxMobile {
     width: 30%;
     height: 90%;
+    overflow-y: auto;
     border-radius: 15px;
     background-color: white;
     position: absolute;
@@ -216,17 +221,20 @@ img {
     z-index: 100;
     border: solid 1px black;
 }
-.inforOtherUserBoxMobile .inforOtherUser{
+
+.inforOtherUserBoxMobile .inforOtherUser {
     height: 50px;
 }
-.inforOtherUserMobile{
+
+.inforOtherUserMobile {
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
     margin: 5px 0;
 }
-.avt-mobile{
+
+.avt-mobile {
     width: 20px;
     height: 20px;
     background-image: url("../../../assets/images/icon-person.png");
@@ -236,12 +244,56 @@ img {
     margin-right: 5px;
 }
 
+.room-avt {
+    background-image: url("../../../assets/images/roomchat.png");
+}
+
+.list-mem {
+    width: 100%;
+    height: 30px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+
+.toggle {
+    width: 10px;
+    height: 10px;
+    border: none;
+    padding: 0;
+    background-color: white;
+    background-size: cover;
+}
+
+.label {
+    padding-left: 20px;
+    padding-right: 0;
+}
+
+.info-option {
+    width: 100%;
+
+}
+.list-mem-box{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    padding-left: 20px;
+}
+.mem-info{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
 @media (max-width : 992px) {
     .file-name {
         max-width: 50px;
-    }   
+    }
 
-    .infor{
+    .infor {
         display: none;
     }
 
@@ -269,8 +321,12 @@ img {
         margin-bottom: 5px;
         z-index: 2;
     }
-    .info-u-btn{
+
+    .info-u-btn {
         background-image: url("../../../assets/images/user.png");
+    }
+    p, button{
+        font-size: 10px;
     }
 
 }
