--- a/src/components/chat/messagelist/ListMess.css
+++ b/src/components/chat/messagelist/ListMess.css
@@ -1,13 +1,15 @@
 .chat-list {
     margin-top: 20px;
-    width: 100%;
+    width: 95%;
+    height: 60%;
     border: 1px solid #e0e0e0;
     border-radius: 16px;
     padding: 16px;
     background: #fff;
     box-shadow: 0 6px 18px rgba(0, 0, 0, 0.06);
     transition: box-shadow 200ms ease, transform 200ms ease;
-    overflow: hidden;
+    overflow-y: auto;
+    margin: 0 10px;
     cursor: pointer;
 }
 
@@ -16,4 +18,21 @@
     width: 10px;
     border-radius: 50%;
     background-color: #0cff5d;
+}
+@media(max-width: 992px) {
+    .chat-list{
+        width: 95%;
+        display: flex;
+    }
+    .list-group{
+        width: 100%;
+    }
+    h6{
+        font-size: 12px;
+    }
+    .list-group-item{
+        font-size: 10px;
+        padding: 3px;
+    }
+    
 }
