--- a/src/components/chat/sidebar/sidebar.css
+++ b/src/components/chat/sidebar/sidebar.css
@@ -1,6 +1,37 @@
-.sidebar{
-    padding: 0%;
+.chat-sidebar {
+    width: 90%;
+    height: 40%;
+    padding: 20px 10px 0 10px;
 }
+
 .filter-buttons {
     margin-top: 10px;
+}
+h1{
+    font-size: 30px;
+    margin-bottom: 20px;
+}
+
+.side-bar {
+    width: 100%;
+    height: 100%;
+}
+
+@media(max-width: 992px) {
+    .chat-sidebar{
+        width: 100%;
+        height: 100px;
+        display: flex;
+    }
+    .name{
+        display: none;
+    }
+    input{
+        width: 80% !important;
+    }
+    input, .btn {
+        height: 25px;
+        font-size: 10px !important;
+        padding: 0 4px;
+    }
 }
