--- a/src/layout/ChatLayout.css
+++ b/src/layout/ChatLayout.css
@@ -11,10 +11,16 @@
 
 .chat-left {
     width: 25%;
-    margin: 3%;
+    height: 100vh;
+    /* margin: 3%; */
     background-color: white;
     /* border: 1px solid #ccc;
     border-radius: 15%; */
+}
+.chat-left-content{
+    width: 100%;
+    height: 100%;
+    background-color: white;
 }
 
 .chat-right {
@@ -24,4 +30,38 @@
     flex-direction: row;
     padding: 15px;
     background-color: rgb(184, 184, 184);
+}
+
+.chat-icon {
+    display: none;
+}
+
+@media(max-width: 992px) {
+    .chat-container{
+        flex-direction: row;
+    }
+
+    .chat-left {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        padding-top: 20px;
+    }
+    .chat-left-content{
+        width: 95%;
+        height:100%;
+    }
+    .chat-right {
+        width: 95%;
+    }
+    .chat-icon {
+        width: 20px;
+        height: 20px;
+        display: block;
+        border: none;
+        background-color: white;
+        background-image: url("../assets/images/chat.png");
+        background-size: cover;
+    }
 }
