--- a/src/components/chat/chatOtherUser/InfoChat.css
+++ b/src/components/chat/chatOtherUser/InfoChat.css
@@ -14,7 +14,8 @@ p {
     width: 100%;
     height: 70%;
     border-radius: 15px;
-    background-color: white;
+    background-color: var(--bg);
+    color: var(--text);
     overflow-y: auto;
 }
 
@@ -93,7 +94,7 @@ p {
 .img {
     padding: 0 3px;
     margin-bottom: 6px;
-}
+}   
 
 img {
     width: 100%;
@@ -129,7 +130,7 @@ img {
 }
 
 .file-name {
-    max-width: 100px;
+    max-width: 60%;
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
@@ -161,7 +162,8 @@ img {
     height: 30%;
     margin-top: 20px;
     border-radius: 15px;
-    background-color: white;
+    background-color: var(--bg);
+    color: var(--text);
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -202,7 +204,7 @@ img {
     justify-content: center;
     align-items: center;
     position: absolute;
-    right: 50px;
+    right: 10%;
     z-index: 100;
 }
 
@@ -217,7 +219,7 @@ img {
     border-radius: 15px;
     background-color: white;
     position: absolute;
-    right: 50px;
+    right: 10%;
     z-index: 100;
     border: solid 1px black;
 }
@@ -290,7 +292,7 @@ img {
 
 @media (max-width : 992px) {
     .file-name {
-        max-width: 50px;
+        max-width: 60%;
     }
 
     .infor {
