--- a/src/components/chat/messagelist/ListMess.css
+++ b/src/components/chat/messagelist/ListMess.css
@@ -5,34 +5,58 @@
     border: 1px solid #e0e0e0;
     border-radius: 16px;
     padding: 16px;
-    background: #fff;
+    background-color:var(--bg);
     box-shadow: 0 6px 18px rgba(0, 0, 0, 0.06);
     transition: box-shadow 200ms ease, transform 200ms ease;
     overflow-y: auto;
     margin: 0 10px;
     cursor: pointer;
+    display: flex;
+    flex-direction: column;
+}
+.list-group{
+    background-color: var(--bg);
+}
+.list-group-item-action{
+    color: var(--text);
+}
+.chat-list .list-group-item{
+
+    background-color: var(--bg);
+}
+.list-group-item {
+    border: none;
+    padding: 10px 5px 10px 10px;
+    border-radius: 12px;
+    margin-bottom: 10px;
+    /* background-color: var(--); */
+    /* transition: background-color 200ms ease; */
 }
 
-.status-dot{
+.status-dot {
     height: 10px;
     width: 10px;
     border-radius: 50%;
     background-color: #0cff5d;
 }
+
 @media(max-width: 992px) {
-    .chat-list{
+    .chat-list {
         width: 95%;
         display: flex;
     }
-    .list-group{
+
+    .list-group {
         width: 100%;
     }
-    h6{
+
+    h6 {
         font-size: 12px;
     }
-    .list-group-item{
+
+    .list-group-item {
         font-size: 10px;
         padding: 3px;
     }
-    
+
 }
