--- a/src/components/chat/sidebar/sidebar.css
+++ b/src/components/chat/sidebar/sidebar.css
@@ -1,35 +1,50 @@
+
 .chat-sidebar {
     width: 90%;
-    height: 40%;
+    height: 20vh;
     padding: 20px 10px 0 10px;
+    margin-bottom: 50px;
 }
+.buttonSide{
+    display: flex;
+    flex-direction: column;
 
+    gap: 10px;
+}
 .filter-buttons {
     margin-top: 10px;
+  
 }
-h1{
+
+h1 {
     font-size: 30px;
     margin-bottom: 20px;
+    color: var(--text);
 }
 
 .side-bar {
     width: 100%;
     height: 100%;
+    padding: 10px;
 }
 
 @media(max-width: 992px) {
-    .chat-sidebar{
+    .chat-sidebar {
         width: 100%;
         height: 100px;
         display: flex;
     }
-    .name{
+
+    .name {
         display: none;
     }
-    input{
+
+    input {
         width: 80% !important;
     }
-    input, .btn {
+
+    input,
+    .btn {
         height: 25px;
         font-size: 10px !important;
         padding: 0 4px;
