--- a/src/layout/ChatLayout.css
+++ b/src/layout/ChatLayout.css
@@ -12,15 +12,20 @@
 .chat-left {
     width: 25%;
     height: 100vh;
-    /* margin: 3%; */
-    background-color: white;
-    /* border: 1px solid #ccc;
-    border-radius: 15%; */
+    display: flex;
+    flex-direction: row;
+    background-color: rgb(184, 184, 184);
 }
-.chat-left-content{
+
+.chat-left-content {
     width: 100%;
-    height: 100%;
-    background-color: white;
+    height: 96.2vh;
+    background-color: var(--bg);
+    display: flex;
+    flex-direction: column;
+    border-radius: 20px;
+    padding: 10px;
+    margin: 15px 5px 10px 15px;
 }
 
 .chat-right {
@@ -37,7 +42,7 @@
 }
 
 @media(max-width: 992px) {
-    .chat-container{
+    .chat-container {
         flex-direction: row;
     }
 
@@ -48,13 +53,16 @@
         justify-content: center;
         padding-top: 20px;
     }
-    .chat-left-content{
+
+    .chat-left-content {
         width: 95%;
-        height:100%;
+        height: 100%;
     }
+
     .chat-right {
         width: 95%;
     }
+
     .chat-icon {
         width: 20px;
         height: 20px;
