--- a/src/components/chat/messagelist/ListMess.css
+++ b/src/components/chat/messagelist/ListMess.css
@@ -5,7 +5,7 @@
     border: 1px solid #e0e0e0;
     border-radius: 16px;
     padding: 16px;
-    background-color:var(--bg);
+    background-color: var(--bg);
     box-shadow: 0 6px 18px rgba(0, 0, 0, 0.06);
     transition: box-shadow 200ms ease, transform 200ms ease;
     overflow-y: auto;
@@ -14,16 +14,20 @@
     display: flex;
     flex-direction: column;
 }
-.list-group{
+
+.list-group {
     background-color: var(--bg);
 }
-.list-group-item-action{
+
+.list-group-item-action {
     color: var(--text);
 }
-.chat-list .list-group-item{
+
+.chat-list .list-group-item {
 
     background-color: var(--bg);
 }
+
 .list-group-item {
     border: none;
     padding: 10px 5px 10px 10px;
@@ -31,6 +35,17 @@
     margin-bottom: 10px;
     /* background-color: var(--); */
     /* transition: background-color 200ms ease; */
+}
+
+.avatar {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    margin-left:-20px;
+    margin-top: -10px;
+    background-image: url("../../../assets/images/user.png");
+    
+    /* background-size: cover; */
 }
 
 .status-dot {
