--- a/src/components/chat/sidebar/sidebar.css
+++ b/src/components/chat/sidebar/sidebar.css
@@ -1,19 +1,19 @@
-
 .chat-sidebar {
-    width: 90%;
+    width: 100%;
     height: 20vh;
-    padding: 20px 10px 0 10px;
+    padding: 0 10px 0 10px;
     margin-bottom: 50px;
 }
-.buttonSide{
+
+.buttonSide {
+    width: 100%;
     display: flex;
     flex-direction: column;
-
     gap: 10px;
 }
+
 .filter-buttons {
     margin-top: 10px;
-  
 }
 
 h1 {
@@ -21,20 +21,53 @@ h1 {
     margin-bottom: 20px;
     color: var(--text);
 }
-.d-flex.btn-outline-success{
+
+.d-flex.btn-outline-success {
     max-width: 60%;
 }
+
 .side-bar {
     width: 100%;
     height: 100%;
     padding: 10px;
 }
 
+.name {
+    font-size: 25px;
+}
+
+.search {
+    width: 100%;
+    height: 30px;
+    font-size: 20px;
+}
+
+.btn {
+    height: 30px;
+    font-size: 10px !important;
+}
+
+@media(max-width: 1200px) {
+    .name {
+        font-size: 20px;
+    }
+}
+
 @media(max-width: 992px) {
+    .sidebar-container {
+        height: 30%;
+    }
+    .buttonSide{
+        gap: 0;
+    }
     .chat-sidebar {
         width: 100%;
         height: 100px;
         display: flex;
+    }
+
+    .filter-buttons {
+        margin: 0;
     }
 
     .name {
@@ -49,6 +82,5 @@ h1 {
     .btn {
         height: 25px;
         font-size: 10px !important;
-        padding: 0 4px;
     }
 }
