--- a/src/layout/ChatLayout.css
+++ b/src/layout/ChatLayout.css
@@ -43,24 +43,34 @@
 
 @media(max-width: 992px) {
     .chat-container {
+        width: 100%;
         flex-direction: row;
     }
 
     .chat-left {
         width: 100%;
-        height: 100%;
         display: flex;
         justify-content: center;
-        padding-top: 20px;
+        flex-direction: row;
     }
 
     .chat-left-content {
         width: 95%;
-        height: 100%;
+        margin: 0;
+        border-radius: 0;
+        border-left: solid 1px gray;
     }
 
     .chat-right {
         width: 95%;
+    }
+    .icon-menu{
+        width: 100%;
+        display: flex;
+        padding-top: 20px;
+        align-items: center;
+        flex-direction: column;
+        background-color: var(--bg);
     }
 
     .chat-icon {
@@ -68,7 +78,7 @@
         height: 20px;
         display: block;
         border: none;
-        background-color: white;
+        background-color: var(--bg);
         background-image: url("../assets/images/chat.png");
         background-size: cover;
     }
