--- a/src/components/chat/chatOtherUser/ChatOtherUser.css
+++ b/src/components/chat/chatOtherUser/ChatOtherUser.css
@@ -33,7 +33,7 @@
     color: var(--text);
 }
 
-.theme-btn{
+.theme-btn {
     width: 30px;
     height: 30px;
     padding: 0;
@@ -51,6 +51,7 @@
     overflow-y: auto;
     display: flex;
     flex-direction: column;
+    position: relative;
 }
 
 .message {
@@ -119,12 +120,14 @@
     opacity: 0 !important;
     transform: none !important;
 }
-.image-preview{
+
+.image-preview {
     position: absolute;
     bottom: 60px;
     left: 10px;
 }
-.remove-image{
+
+.remove-image {
     width: 25px;
     height: 25px;
     font-size: 13px;
@@ -157,7 +160,7 @@
 
 .image-btn,
 .file-btn {
-    width: 30px;    
+    width: 30px;
     height: 30px;
     background-color: var(--bg);
     background-image: url('../../../assets/images/imageicon.png');
@@ -195,20 +198,21 @@
 }
 
 .icon-btn {
-    width: 30px;    
+    width: 30px;
     height: 30px;
     margin-bottom: 4px;
     background-image: url('../../../assets/images/emoji.png');
 }
 
 .send-btn {
-    width: 30px;    
+    width: 30px;
     height: 30px;
     margin-bottom: 3px;
     background-image: url('../../../assets/images/send.png');
     background-size: contain;
 }
-.room-avt{
+
+.room-avt {
     width: 40px;
     height: 40px;
     margin: 5px 10px 5px 10px;
@@ -218,19 +222,102 @@
     background-image: url("../../../assets/images/roomchat.png");
     background-size: cover;
 }
-.sender-mess{
+
+.sender-mess {
     color: gray;
     font-size: 10px;
 
 }
+
+.error-box {
+    width: 100%;
+    position: absolute;
+    bottom: 4px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.error-noti {
+    padding: 5px 10px;
+    font-size: 16px;
+    color: white;
+    border-radius: 20px;
+    background-color: red;
+}
+
+.send-status {
+    width: 48px;
+    height: 36px;
+    background: #e5e7eb;
+    border-radius: 999px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 4px;
+}
+
+.send-status .dot {
+    width: 6px;
+    height: 6px;
+    background-color: #6b7280;
+    border-radius: 50%;
+    animation: sending 1.4s infinite ease-in-out;
+}
+
+.send-status .dot-1 {
+    animation-delay: 0s;
+}
+
+.send-status .dot-2 {
+    animation-delay: 0.2s;
+}
+
+.send-status .dot-3 {
+    animation-delay: 0.4s;
+}
+
+@keyframes sending {
+
+    0%,
+    80%,
+    100% {
+        transform: scale(0.6);
+        opacity: 0.4;
+    }
+
+    40% {
+        transform: scale(1);
+        opacity: 1;
+    }
+}
+
+
+/* Trạng thái ban đầu */
+.slide-up {
+    opacity: 0;
+    transform: translateY(40px);
+    animation: slideUp 0.5s ease-out forwards;
+}
+
+@keyframes slideUp {
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
 @media (max-width: 992px) {
-    .chat-box{
+    .chat-box {
         width: 95%;
     }
-    p, button{
+
+    p,
+    button {
         font-size: 12px;
     }
-    .time-send{
+
+    .time-send {
         font-size: 8px;
     }
 }
