--- a/src/components/chat/chatOtherUser/InfoChat.css
+++ b/src/components/chat/chatOtherUser/InfoChat.css
@@ -16,7 +16,6 @@ p {
     border-radius: 15px;
     background-color: var(--bg);
     color: var(--text);
-    overflow-y: auto;
 }
 
 .inforOtherUser {
@@ -45,6 +44,7 @@ p {
 
 .media-detail-box {
     width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -76,6 +76,7 @@ p {
 .media {
     width: 100%;
     height: 90%;
+    overflow-y: auto;
     position: relative;
     border-top: solid 1px gray;
     padding: 10px 30px;
@@ -216,7 +217,6 @@ img {
 .inforOtherUserBoxMobile {
     width: 30%;
     height: 90%;
-    overflow-y: auto;
     border-radius: 15px;
     background-color: var(--bg);
     color: var(--text);
