--- a/src/layout/ChatLayout.css
+++ b/src/layout/ChatLayout.css
@@ -42,7 +42,8 @@
 .chat-icon {
     display: none;
 }
-.end-session{
+
+.end-session {
     width: 100%;
     height: 100%;
     display: flex;
@@ -54,7 +55,8 @@
     z-index: 100;
     background-color: rgba(0, 0, 0, 0.5);
 }
-.box{
+
+.box {
     width: 400px;
     height: 200px;
     background-color: white;
@@ -66,14 +68,16 @@
     align-items: center;
     background-color: rgba(209, 244, 212, 0.558);
 }
-.box > p{
+
+.box>p {
     width: 100%;
     font-size: 30px;
     color: var(--text);
     text-align: center;
     margin-top: 10px;
 }
-.btn-ok{
+
+.btn-ok {
     width: 70px;
     height: 30px;
     background-color: green;
@@ -82,13 +86,15 @@
     border-radius: 5px;
     margin-top: 20px;
     font-weight: bold;
-    
+
 }
+
 @media(max-width: 992px) {
     .chat-container {
         width: 100%;
         flex-direction: row;
     }
+
 
     .chat-left {
         width: 100%;
@@ -106,8 +112,10 @@
 
     .chat-right {
         width: 95%;
+        order: -1;
     }
-    .icon-menu{
+
+    .icon-menu {
         width: 100%;
         display: flex;
         padding-top: 20px;
@@ -115,7 +123,6 @@
         flex-direction: column;
         background-color: var(--bg);
     }
-
     .chat-icon {
         width: 20px;
         height: 20px;
